--- a/app/src/main/res/layout/activity_assignments_history.xml
+++ b/app/src/main/res/layout/activity_assignments_history.xml
@@ -4,57 +4,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.shoaibnwar.iwsm.Activities.ContactsList"
+    tools:context="com.shoaibnwar.iwsm.Activities.AssignmentsHistory"
     android:background="@color/white">
-
-
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <RelativeLayout
-            android:id="@+id/rl_top_bar"
+            android:id="@+id/rl_top_title_bar"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="45dp"
+            android:layout_alignParentTop="true"
             android:background="@color/colorPink">
 
             <ImageView
                 android:id="@+id/iv_back_arrow"
-                android:layout_width="30dp"
-                android:layout_height="20dp"
+                android:layout_width="25dp"
+                android:layout_height="15dp"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="15dp"
                 android:scaleType="fitXY"
                 android:tint="@color/white"
                 android:src="@drawable/arrow_back"/>
-
             <TextView
+                android:layout_toRightOf="@id/iv_back_arrow"
+                android:layout_marginLeft="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_toRightOf="@+id/iv_back_arrow"
-                android:layout_marginLeft="10dp"
-                android:text="Contacts List"
-                android:textSize="20sp"
                 android:textColor="@color/white"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:text="Orders Details" />
 
         </RelativeLayout>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rc_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_below="@+id/rl_top_bar"
-            android:scrollbars="none" />
 
-        <ProgressBar
-            android:id="@+id/progress_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rc_items"
+            android:layout_below="@+id/rl_top_title_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </android.support.v7.widget.RecyclerView>
 
     </RelativeLayout>
 
