--- a/app/src/main/res/layout/activity_order_items_detail.xml
+++ b/app/src/main/res/layout/activity_order_items_detail.xml
@@ -1,21 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
+    android:layout_height="match_parent"
+    tools:context="com.shoaibnwar.iwsm.Activities.OrderItemsDetail"
+    android:background="@color/white">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:id="@+id/rl_top_title_bar"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_alignParentTop="true"
+            android:background="@color/colorPink">
+
+            <ImageView
+                android:id="@+id/iv_back_arrow"
+                android:layout_width="25dp"
+                android:layout_height="15dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="15dp"
+                android:scaleType="fitXY"
+                android:tint="@color/white"
+                android:src="@drawable/arrow_back"/>
+            <TextView
+                android:layout_toRightOf="@id/iv_back_arrow"
+                android:layout_marginLeft="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:text="Items Details" />
+
+        </RelativeLayout>
 
 
         <LinearLayout
             android:id="@+id/ll_hearder_for_items"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="80dp"
             android:layout_below="@+id/rl_top_title_bar"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="@color/black">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -23,12 +55,12 @@
                 android:layout_weight="1"
                 android:background="@drawable/grid_item_background">
 
-                <ImageView
-                    android:id="@+id/iv_item_image"
+                <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:src="@drawable/baskect_icon"
-                    android:padding="10dp"
+                    android:layout_height="wrap_content"
+                    android:text="Image"
+                    android:padding="4dp"
+                    android:textColor="@color/white"
                     android:layout_centerInParent="true"/>
 
             </RelativeLayout>
@@ -40,13 +72,12 @@
                 android:background="@drawable/grid_item_background">
 
                 <TextView
-                    android:id="@+id/tv_item_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Item Name"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginRight="4dp"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
+                    android:gravity="center"
+                    android:padding="4dp"
                     android:layout_centerInParent="true"/>
 
             </RelativeLayout>
@@ -58,13 +89,12 @@
                 android:background="@drawable/grid_item_background">
 
                 <TextView
-                    android:id="@+id/tv_item_code"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Item Code"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginRight="4dp"
-                    android:textColor="@color/black"
+                    android:gravity="center"
+                    android:padding="4dp"
+                    android:textColor="@color/white"
                     android:layout_centerInParent="true"/>
 
             </RelativeLayout>
@@ -77,13 +107,12 @@
                 android:background="@drawable/grid_item_background">
 
                 <TextView
-                    android:id="@+id/tv_item_unit_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Unit Price"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginRight="4dp"
-                    android:textColor="@color/black"
+                    android:gravity="center"
+                    android:padding="4dp"
+                    android:textColor="@color/white"
                     android:layout_centerInParent="true"/>
 
             </RelativeLayout>
@@ -95,13 +124,12 @@
                 android:background="@drawable/grid_item_background">
 
                 <TextView
-                    android:id="@+id/tv_item_quantity"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Quantities"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginRight="4dp"
-                    android:textColor="@color/black"
+                    android:gravity="center"
+                    android:padding="4dp"
+                    android:textColor="@color/white"
                     android:layout_centerInParent="true"/>
 
             </RelativeLayout>
@@ -113,13 +141,12 @@
                 android:background="@drawable/grid_item_background">
 
                 <TextView
-                    android:id="@+id/tv_item_discount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Discount"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginRight="4dp"
-                    android:textColor="@color/black"
+                    android:padding="4dp"
+                    android:gravity="center"
+                    android:textColor="@color/white"
                     android:layout_centerInParent="true"/>
 
             </RelativeLayout>
@@ -131,24 +158,35 @@
                 android:background="@drawable/grid_item_background">
 
                 <TextView
-                    android:id="@+id/tv_item_total_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Total Price"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginRight="4dp"
-                    android:textColor="@color/black"
+                    android:gravity="center"
+                    android:padding="4dp"
+                    android:textColor="@color/white"
                     android:layout_centerInParent="true"/>
 
             </RelativeLayout>
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/iv_order_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/ll_hearder_for_items">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rc_items"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </android.support.v7.widget.RecyclerView>
+
+        </RelativeLayout>
+
+
     </RelativeLayout>
+
 
 </android.support.constraint.ConstraintLayout>
