--- a/app/src/main/res/layout/custom_list_item.xml
+++ b/app/src/main/res/layout/custom_list_item.xml
@@ -24,5 +24,13 @@
             android:textColor="@color/black"
             android:text="Price"
             android:visibility="gone"/>
+        <TextView
+            android:id="@+id/tv_item_code"
+            android:layout_below="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:textColor="@color/color_text_hint"
+            android:visibility="gone"/>
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
