--- a/app/src/main/res/layout/custome_addmore_product.xml
+++ b/app/src/main/res/layout/custome_addmore_product.xml
@@ -82,7 +82,7 @@
                             android:id="@+id/tv_item_code"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="El201"
+                            android:text=""
                             android:layout_toRightOf="@+id/item_code_text"
                             android:layout_marginLeft="4dp"
                             android:textStyle="bold"
