--- a/app/src/main/res/layout/activity_contacts_list.xml
+++ b/app/src/main/res/layout/activity_contacts_list.xml
@@ -19,15 +19,19 @@
             android:layout_height="50dp"
             android:background="@color/colorPink">
 
-            <ImageView
+            <RelativeLayout
                 android:id="@+id/iv_back_arrow"
+                android:layout_width="30dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp">
+            <ImageView
                 android:layout_width="30dp"
                 android:layout_height="20dp"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="15dp"
                 android:scaleType="fitXY"
                 android:tint="@color/white"
                 android:src="@drawable/arrow_back"/>
+            </RelativeLayout>
 
             <TextView
                 android:layout_width="wrap_content"
