--- a/app/src/main/res/layout/activity_single_item_detail_for_cabs.xml
+++ b/app/src/main/res/layout/activity_single_item_detail_for_cabs.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".Activities.SingleItemDetailActivityForCabs">
+    tools:context=".Activities.SingleItemDetailActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -565,7 +565,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="Confrim"
+                android:text="Confirm"
                 android:background="@color/colorPink"
                 android:textColor="@color/white"
                 android:textAllCaps="false"
@@ -579,7 +579,21 @@
                 android:background="@color/colorPink"
                 android:textColor="@color/white"
                 android:textAllCaps="false"
+                android:visibility="gone"
+                android:layout_marginRight="2dp"/>
+
+            <Button
+                android:id="@+id/bt_sell_now"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="Sale Now"
+                android:background="@color/colorPink"
+                android:textColor="@color/white"
+                android:textAllCaps="false"
+                android:layout_marginLeft="2dp"
                 android:visibility="gone"/>
+
 
         </LinearLayout>
 
