--- a/app/src/main/res/layout/custome_itme_adding_layout.xml
+++ b/app/src/main/res/layout/custome_itme_adding_layout.xml
@@ -15,15 +15,19 @@
             android:layout_alignParentTop="true"
             android:background="@color/colorPink">
 
-            <ImageView
+            <RelativeLayout
+                android:layout_width="30dp"
+                android:layout_height="match_parent"
                 android:id="@+id/iv_back_arrow"
+                android:layout_marginLeft="10dp">
+            <ImageView
                 android:layout_width="25dp"
                 android:layout_height="15dp"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="15dp"
                 android:scaleType="fitXY"
                 android:tint="@color/white"
                 android:src="@drawable/arrow_back"/>
+            </RelativeLayout>
             <TextView
                 android:layout_toRightOf="@id/iv_back_arrow"
                 android:layout_marginLeft="15dp"
